# vps-hermes-management

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  README.md  bootstrap.sh  install.sh
config/: anthropic.json  deepseek.json  google.json  groq.json  huggingface.json  kimi.json  mimo.json  (+8 more)
management-api/: pyproject.toml
management-api/hermes_mgmt/: auth.py  cli_runner.py  config.py  deps.py  env_file.py  hermes_fs.py  main.py  models.py  systemd_ctl.py
management-api/hermes_mgmt/assets/: whatsapp_pair.mjs
management-api/hermes_mgmt/routes/: __init__.py  auth_routes.py  channels.py  cli_routes.py  codex.py  config_routes.py  control.py  cron_routes.py  env_routes.py  logs.py  openviking.py  roles.py  status.py  whatsapp.py  zalo.py
management-api/hermes_mgmt/routes/v2/: __init__.py  _base.py  _parsers.py  auth.py  backup.py  bundles.py  config.py  cron.py  curator.py  diagnostics.py  fallback.py  gateway.py  kanban.py  memory.py  model.py  profile.py  sessions.py  skills.py  tools.py  webhook.py
management-api/tests/: conftest.py  test_auth.py  test_codex.py  test_config_routes.py  test_env.py  test_integration.py  test_openviking.py  test_roles.py  test_status.py  test_v2_parsers.py  test_v2_parsers_fixtures.py  test_v2_routes.py  test_whatsapp.py  test_zalo.py
management-api/tests/fixtures/: hermes_cli_samples.txt
rag-mcp/: README.md  pyproject.toml
rag-mcp/hermes_rag/: __init__.py  chunker.py  cli.py  config.py  embedder.py  ingest.py  mcp_server.py  search.py  store.py
rag-mcp/tests/: test_chunker.py  test_ingest.py  test_store.py
(+62 files in other folders)
