[project]
name = "hermes-mgmt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "bcrypt>=4.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "psutil>=5.9",
  "sse-starlette>=2.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "segno>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx", "respx"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hermes_mgmt*"]

[tool.setuptools.package-data]
hermes_mgmt = ["assets/*.mjs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
