[project]
name = "hermes-rag"
version = "0.1.0"
description = "Local RAG retrieval service for Hermes Agent, exposed over MCP (StreamableHTTP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastembed>=0.4,<1.0",
    "numpy>=1.26",
    "pypdf>=4.0",
    "mcp>=1.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
hermes-rag = "hermes_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
